--- a/WeatherAppV2/Base.lproj/Main.storyboard
+++ b/WeatherAppV2/Base.lproj/Main.storyboard
@@ -22,34 +22,34 @@
                                 <rect key="frame" x="-50" y="-30" width="475" height="747"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vod-5v-gSQ">
-                                <rect key="frame" x="165" y="55" width="45.5" height="20"/>
-                                <fontDescription key="fontDescription" name="ArialRoundedMTBold" family="Arial Rounded MT Bold" pointSize="17"/>
-                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                <nil key="highlightedColor"/>
-                            </label>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="SunnyCloud" translatesAutoresizingMaskIntoConstraints="NO" id="Mi6-yB-Vjj">
-                                <rect key="frame" x="123.5" y="83" width="128" height="128"/>
+                                <rect key="frame" x="123.5" y="128" width="128" height="128"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="128" id="7Jm-YV-LaM"/>
                                     <constraint firstAttribute="width" secondItem="Mi6-yB-Vjj" secondAttribute="height" multiplier="1:1" id="BUE-rr-aWE"/>
                                     <constraint firstAttribute="width" constant="128" id="rby-JE-7Ra"/>
                                 </constraints>
                             </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vod-5v-gSQ">
+                                <rect key="frame" x="164" y="100" width="45.5" height="20"/>
+                                <fontDescription key="fontDescription" name="ArialRoundedMTBold" family="Arial Rounded MT Bold" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FBT-rR-gX0">
-                                <rect key="frame" x="163.5" y="211" width="48" height="46.5"/>
+                                <rect key="frame" x="163.5" y="256" width="48" height="46.5"/>
                                 <fontDescription key="fontDescription" name="ArialRoundedMTBold" family="Arial Rounded MT Bold" pointSize="40"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zm0-nR-BTR">
-                                <rect key="frame" x="168.5" y="257.5" width="38.5" height="20"/>
+                                <rect key="frame" x="168.5" y="302.5" width="38.5" height="20"/>
                                 <fontDescription key="fontDescription" name="ArialRoundedMTBold" family="Arial Rounded MT Bold" pointSize="17"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="City" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mRR-JC-dzU">
-                                <rect key="frame" x="162.5" y="16" width="50" height="31"/>
+                                <rect key="frame" x="162.5" y="61" width="50" height="31"/>
                                 <fontDescription key="fontDescription" name="ArialRoundedMTBold" family="Arial Rounded MT Bold" pointSize="26"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
@@ -64,8 +64,8 @@
                             <constraint firstItem="mRR-JC-dzU" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="EpK-vY-GPA"/>
                             <constraint firstItem="zm0-nR-BTR" firstAttribute="top" secondItem="FBT-rR-gX0" secondAttribute="bottom" id="Yaf-af-Kdm"/>
                             <constraint firstItem="Vod-5v-gSQ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="gBf-gl-Ze7"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="zm0-nR-BTR" secondAttribute="bottom" priority="250" constant="351" id="hQO-3o-Z3s"/>
-                            <constraint firstItem="mRR-JC-dzU" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="16" id="jsZ-BQ-JMJ"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="zm0-nR-BTR" secondAttribute="bottom" priority="250" constant="345" id="hQO-3o-Z3s"/>
+                            <constraint firstItem="mRR-JC-dzU" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="61" id="jsZ-BQ-JMJ"/>
                             <constraint firstItem="Mi6-yB-Vjj" firstAttribute="top" secondItem="Vod-5v-gSQ" secondAttribute="bottom" constant="8" id="qgR-bD-UHF"/>
                             <constraint firstItem="zm0-nR-BTR" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="sHz-CX-qLD"/>
                         </constraints>
