--- a/WeatherAppV2/Base.lproj/Main.storyboard
+++ b/WeatherAppV2/Base.lproj/Main.storyboard
@@ -23,37 +23,87 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="SunnyCloud" translatesAutoresizingMaskIntoConstraints="NO" id="Mi6-yB-Vjj">
-                                <rect key="frame" x="123.5" y="128" width="128" height="128"/>
+                                <rect key="frame" x="123.5" y="77" width="128" height="128"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="128" id="7Jm-YV-LaM"/>
                                     <constraint firstAttribute="width" secondItem="Mi6-yB-Vjj" secondAttribute="height" multiplier="1:1" id="BUE-rr-aWE"/>
                                     <constraint firstAttribute="width" constant="128" id="rby-JE-7Ra"/>
                                 </constraints>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vod-5v-gSQ">
-                                <rect key="frame" x="164" y="100" width="45.5" height="20"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vod-5v-gSQ">
+                                <rect key="frame" x="187.5" y="69" width="0.0" height="0.0"/>
                                 <fontDescription key="fontDescription" name="ArialRoundedMTBold" family="Arial Rounded MT Bold" pointSize="17"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="10" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FBT-rR-gX0">
-                                <rect key="frame" x="163.5" y="256" width="48" height="46.5"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FBT-rR-gX0">
+                                <rect key="frame" x="187.5" y="205" width="0.0" height="0.0"/>
                                 <fontDescription key="fontDescription" name="ArialRoundedMTBold" family="Arial Rounded MT Bold" pointSize="40"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zm0-nR-BTR">
-                                <rect key="frame" x="168.5" y="302.5" width="38.5" height="20"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zm0-nR-BTR">
+                                <rect key="frame" x="187.5" y="205" width="0.0" height="0.0"/>
                                 <fontDescription key="fontDescription" name="ArialRoundedMTBold" family="Arial Rounded MT Bold" pointSize="17"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="City" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mRR-JC-dzU">
-                                <rect key="frame" x="162.5" y="61" width="50" height="31"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mRR-JC-dzU">
+                                <rect key="frame" x="187.5" y="61" width="0.0" height="0.0"/>
                                 <fontDescription key="fontDescription" name="ArialRoundedMTBold" family="Arial Rounded MT Bold" pointSize="26"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Pep-Bm-w9d">
+                                <rect key="frame" x="0.0" y="255" width="375" height="412"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ForecastCell" id="eIZ-mr-TCS" customClass="ForecastCell" customModule="WeatherAppV2" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="eIZ-mr-TCS" id="Ho3-fs-7aD">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="SunnyCloud" translatesAutoresizingMaskIntoConstraints="NO" id="AXI-Z2-ZZl">
+                                                    <rect key="frame" x="325" y="4.5" width="35" height="35"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="height" constant="35" id="aFp-Uh-7Yc"/>
+                                                        <constraint firstAttribute="width" constant="35" id="dI4-nL-DdV"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Monday" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QBY-al-qvW">
+                                                    <rect key="frame" x="15" y="9" width="84" height="26"/>
+                                                    <fontDescription key="fontDescription" name="ArialRoundedMTBold" family="Arial Rounded MT Bold" pointSize="22"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="20" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jov-jM-PkY">
+                                                    <rect key="frame" x="174" y="9" width="27" height="26"/>
+                                                    <fontDescription key="fontDescription" name="ArialRoundedMTBold" family="Arial Rounded MT Bold" pointSize="22"/>
+                                                    <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            <constraints>
+                                                <constraint firstItem="Jov-jM-PkY" firstAttribute="leading" secondItem="QBY-al-qvW" secondAttribute="trailing" priority="250" constant="75" id="E0g-SA-nJM"/>
+                                                <constraint firstItem="QBY-al-qvW" firstAttribute="leading" secondItem="Ho3-fs-7aD" secondAttribute="leading" constant="15" id="JzL-n2-t5o"/>
+                                                <constraint firstItem="Jov-jM-PkY" firstAttribute="centerY" secondItem="Ho3-fs-7aD" secondAttribute="centerY" id="Tcs-tg-JYp"/>
+                                                <constraint firstItem="AXI-Z2-ZZl" firstAttribute="centerY" secondItem="Ho3-fs-7aD" secondAttribute="centerY" id="ZBa-Ds-v6N"/>
+                                                <constraint firstItem="AXI-Z2-ZZl" firstAttribute="leading" secondItem="Jov-jM-PkY" secondAttribute="trailing" constant="124" id="euS-cs-Rot"/>
+                                                <constraint firstAttribute="trailing" secondItem="AXI-Z2-ZZl" secondAttribute="trailing" constant="15" id="ezF-Pg-Sy2"/>
+                                                <constraint firstItem="QBY-al-qvW" firstAttribute="centerY" secondItem="Ho3-fs-7aD" secondAttribute="centerY" id="i0f-XE-x0Z"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <connections>
+                                            <outlet property="forecastDay" destination="QBY-al-qvW" id="b8C-q3-wXn"/>
+                                            <outlet property="forecastTemp" destination="Jov-jM-PkY" id="vIg-NV-mNY"/>
+                                        </connections>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
@@ -62,12 +112,16 @@
                             <constraint firstItem="FBT-rR-gX0" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="8pC-G3-LnX"/>
                             <constraint firstItem="Mi6-yB-Vjj" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="E6r-bd-UqD"/>
                             <constraint firstItem="mRR-JC-dzU" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="EpK-vY-GPA"/>
+                            <constraint firstItem="Pep-Bm-w9d" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="OwY-Ik-DS9"/>
+                            <constraint firstItem="Pep-Bm-w9d" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Uax-Jc-eRq"/>
+                            <constraint firstItem="Pep-Bm-w9d" firstAttribute="top" secondItem="zm0-nR-BTR" secondAttribute="bottom" constant="50" id="W3P-tk-kOc"/>
                             <constraint firstItem="zm0-nR-BTR" firstAttribute="top" secondItem="FBT-rR-gX0" secondAttribute="bottom" id="Yaf-af-Kdm"/>
                             <constraint firstItem="Vod-5v-gSQ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="gBf-gl-Ze7"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="zm0-nR-BTR" secondAttribute="bottom" priority="250" constant="345" id="hQO-3o-Z3s"/>
                             <constraint firstItem="mRR-JC-dzU" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="61" id="jsZ-BQ-JMJ"/>
                             <constraint firstItem="Mi6-yB-Vjj" firstAttribute="top" secondItem="Vod-5v-gSQ" secondAttribute="bottom" constant="8" id="qgR-bD-UHF"/>
                             <constraint firstItem="zm0-nR-BTR" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="sHz-CX-qLD"/>
+                            <constraint firstItem="Pep-Bm-w9d" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="tzG-8m-Whs"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -76,6 +130,7 @@
                         <outlet property="currentCityTemp" destination="FBT-rR-gX0" id="f2g-uY-xir"/>
                         <outlet property="currentDate" destination="zm0-nR-BTR" id="kiJ-tb-cpl"/>
                         <outlet property="specialBG" destination="TuU-cx-rfM" id="z4M-Hd-oEK"/>
+                        <outlet property="tableView" destination="Pep-Bm-w9d" id="RP4-8m-LnM"/>
                         <outlet property="weatherImage" destination="Mi6-yB-Vjj" id="XuK-oT-k4d"/>
                         <outlet property="weatherType" destination="Vod-5v-gSQ" id="haF-cu-JgX"/>
                     </connections>
