--- a/OpenWeatherIOS/Base.lproj/Main.storyboard
+++ b/OpenWeatherIOS/Base.lproj/Main.storyboard
@@ -4,6 +4,7 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
+        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14283.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -17,15 +18,19 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg" translatesAutoresizingMaskIntoConstraints="NO" id="TuU-cx-rfM">
-                                <rect key="frame" x="-50" y="-30" width="475" height="747"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="nightLoadScreen" translatesAutoresizingMaskIntoConstraints="NO" id="TuU-cx-rfM">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                             </imageView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="SunnyCloud" translatesAutoresizingMaskIntoConstraints="NO" id="Mi6-yB-Vjj">
-                                <rect key="frame" x="123.5" y="77" width="128" height="128"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Mi6-yB-Vjj">
+                                <rect key="frame" x="139.5" y="85" width="96" height="96"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="128" id="7Jm-YV-LaM"/>
+                                    <constraint firstAttribute="height" constant="96" id="7Jm-YV-LaM">
+                                        <variation key="heightClass=compact" constant="64"/>
+                                    </constraint>
                                     <constraint firstAttribute="width" secondItem="Mi6-yB-Vjj" secondAttribute="height" multiplier="1:1" id="BUE-rr-aWE"/>
-                                    <constraint firstAttribute="width" constant="128" id="rby-JE-7Ra"/>
+                                    <constraint firstAttribute="width" constant="96" id="rby-JE-7Ra">
+                                        <variation key="heightClass=compact" constant="64"/>
+                                    </constraint>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vod-5v-gSQ">
@@ -35,13 +40,13 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FBT-rR-gX0">
-                                <rect key="frame" x="187.5" y="205" width="0.0" height="0.0"/>
+                                <rect key="frame" x="187.5" y="197" width="0.0" height="0.0"/>
                                 <fontDescription key="fontDescription" name="ArialRoundedMTBold" family="Arial Rounded MT Bold" pointSize="40"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zm0-nR-BTR">
-                                <rect key="frame" x="187.5" y="205" width="0.0" height="0.0"/>
+                                <rect key="frame" x="187.5" y="197" width="0.0" height="0.0"/>
                                 <fontDescription key="fontDescription" name="ArialRoundedMTBold" family="Arial Rounded MT Bold" pointSize="17"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
@@ -53,8 +58,11 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" allowsSelection="NO" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Pep-Bm-w9d">
-                                <rect key="frame" x="0.0" y="255" width="375" height="412"/>
+                                <rect key="frame" x="0.0" y="281" width="375" height="386"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="375" id="CVH-f4-Q83"/>
+                                </constraints>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ForecastCell" id="eIZ-mr-TCS" customClass="ForecastCell" customModule="OpenWeatherIOS" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="28" width="375" height="44"/>
@@ -64,7 +72,7 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="SunnyCloud" translatesAutoresizingMaskIntoConstraints="NO" id="AXI-Z2-ZZl">
-                                                    <rect key="frame" x="325" y="4.5" width="35" height="35"/>
+                                                    <rect key="frame" x="317" y="4.5" width="35" height="35"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="35" id="aFp-Uh-7Yc"/>
                                                         <constraint firstAttribute="width" constant="35" id="dI4-nL-DdV"/>
@@ -77,7 +85,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="20" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Jov-jM-PkY">
-                                                    <rect key="frame" x="174" y="9" width="27" height="26"/>
+                                                    <rect key="frame" x="166" y="9" width="27" height="26"/>
                                                     <fontDescription key="fontDescription" name="ArialRoundedMTBold" family="Arial Rounded MT Bold" pointSize="22"/>
                                                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                     <nil key="highlightedColor"/>
@@ -102,32 +110,40 @@
                                         </connections>
                                     </tableViewCell>
                                 </prototypes>
+                                <variation key="widthClass=compact">
+                                    <mask key="constraints">
+                                        <exclude reference="CVH-f4-Q83"/>
+                                    </mask>
+                                </variation>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="Pep-Bm-w9d" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="1nQ-o1-bfL"/>
+                            <constraint firstItem="Pep-Bm-w9d" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="1nQ-o1-bfL">
+                                <variation key="heightClass=compact" constant="-150"/>
+                            </constraint>
                             <constraint firstItem="Pep-Bm-w9d" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="3of-bO-FeN"/>
-                            <constraint firstItem="FBT-rR-gX0" firstAttribute="top" secondItem="Mi6-yB-Vjj" secondAttribute="bottom" id="7Sj-z1-lQB"/>
+                            <constraint firstItem="FBT-rR-gX0" firstAttribute="top" secondItem="Mi6-yB-Vjj" secondAttribute="bottom" constant="16" id="7Sj-z1-lQB"/>
                             <constraint firstItem="Vod-5v-gSQ" firstAttribute="top" secondItem="mRR-JC-dzU" secondAttribute="bottom" constant="8" id="8hy-8C-UgO"/>
                             <constraint firstItem="FBT-rR-gX0" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="8pC-G3-LnX"/>
-                            <constraint firstAttribute="bottom" secondItem="TuU-cx-rfM" secondAttribute="bottom" constant="-50" id="CtU-zV-lEc"/>
+                            <constraint firstAttribute="bottom" secondItem="TuU-cx-rfM" secondAttribute="bottom" id="CtU-zV-lEc"/>
                             <constraint firstItem="Mi6-yB-Vjj" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="E6r-bd-UqD"/>
                             <constraint firstItem="mRR-JC-dzU" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="EpK-vY-GPA"/>
-                            <constraint firstAttribute="trailing" secondItem="TuU-cx-rfM" secondAttribute="trailing" constant="-50" id="HKH-RK-v90"/>
-                            <constraint firstItem="Pep-Bm-w9d" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="OwY-Ik-DS9"/>
-                            <constraint firstItem="Pep-Bm-w9d" firstAttribute="trailing" secondItem="6Tk-OE-BBY" secondAttribute="trailing" id="Uax-Jc-eRq"/>
-                            <constraint firstItem="Pep-Bm-w9d" firstAttribute="top" secondItem="zm0-nR-BTR" secondAttribute="bottom" constant="50" id="W3P-tk-kOc"/>
+                            <constraint firstAttribute="trailing" secondItem="TuU-cx-rfM" secondAttribute="trailing" id="HKH-RK-v90"/>
+                            <constraint firstItem="Pep-Bm-w9d" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="OwY-Ik-DS9">
+                                <variation key="heightClass=compact" constant="150"/>
+                            </constraint>
                             <constraint firstItem="zm0-nR-BTR" firstAttribute="top" secondItem="FBT-rR-gX0" secondAttribute="bottom" id="Yaf-af-Kdm"/>
-                            <constraint firstItem="Pep-Bm-w9d" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="Zjh-xt-CbB"/>
+                            <constraint firstItem="Pep-Bm-w9d" firstAttribute="top" secondItem="Mi6-yB-Vjj" secondAttribute="bottom" constant="100" id="ZzC-uD-n7i">
+                                <variation key="heightClass=compact" constant="100"/>
+                            </constraint>
                             <constraint firstItem="Vod-5v-gSQ" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="gBf-gl-Ze7"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="zm0-nR-BTR" secondAttribute="bottom" priority="250" constant="345" id="hQO-3o-Z3s"/>
-                            <constraint firstItem="TuU-cx-rfM" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="-30" id="jHA-lI-RLy"/>
+                            <constraint firstItem="TuU-cx-rfM" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="jHA-lI-RLy"/>
                             <constraint firstItem="mRR-JC-dzU" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="61" id="jsZ-BQ-JMJ"/>
-                            <constraint firstItem="TuU-cx-rfM" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" constant="-50" id="oAS-wb-sch"/>
-                            <constraint firstItem="Mi6-yB-Vjj" firstAttribute="top" secondItem="Vod-5v-gSQ" secondAttribute="bottom" constant="8" id="qgR-bD-UHF"/>
+                            <constraint firstItem="TuU-cx-rfM" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="oAS-wb-sch"/>
+                            <constraint firstItem="Mi6-yB-Vjj" firstAttribute="top" secondItem="Vod-5v-gSQ" secondAttribute="bottom" constant="16" id="qgR-bD-UHF"/>
                             <constraint firstItem="zm0-nR-BTR" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="sHz-CX-qLD"/>
-                            <constraint firstItem="Pep-Bm-w9d" firstAttribute="bottom" secondItem="6Tk-OE-BBY" secondAttribute="bottom" id="tzG-8m-Whs"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
@@ -148,6 +164,6 @@
     </scenes>
     <resources>
         <image name="SunnyCloud" width="570" height="550"/>
-        <image name="bg" width="414" height="736"/>
+        <image name="nightLoadScreen" width="3264" height="4928"/>
     </resources>
 </document>
